app/components/servernavbar/servernavbar.less
.navigationbar {
  background-image: url('images/navigationbg.png');
  background-repeat: repeat-x;
  background-size: cover;
  width: 100%;
  height: 100px;
}

.navigationbar .navigationbar-content {
  margin-left: auto;
  margin-right: auto;
  width: 1024px;
}

.navigationbar .thrallbrowser-logo {
  padding-top: 5px;
  padding-left: 40px;
  vertical-align: middle;
  line-height: 24px;
  position: absolute;
  top: 10px;
  font-family: 'poppins';
}

.navigationbar .thrallbrowser-logo a:hover,
.navigationbar .thrallbrowser-logo a:focus {
  color: #DDC271;
  text-decoration: none;
}

.navigationbar .servername {
  text-align: center;
  font-family: 'poppins';
  display: block;
  font-size: 24px;
  padding-top: 5px;
  color: #DDC271;
}

.navigationbar .servername:hover,
.navigationbar .servername:visited,
.navigationbar .servername:active,
.navigationbar .servername:focus {
  color: #DDC271;
  text-decoration: none;
}

.navigationbar .navigationbar-buttons {
  width: 100%;
  display: flex;
  justify-content: center;
}

.navigationbar .navigationbar-buttons .navigationbutton {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 20px;
  background-size: contain;
  text-align: center;
  width: 256px;
  height: 64px;
  padding-top: 11px;
  user-select: none;
  display: inline-block;
  background-image: url('images/button_normal.png');
}

.navigationbar .navigationbutton.active {
  background-image: url('images/button_hover.png');
}

.navigationbar .navigationbutton:hover,
.navigationbar .navigationbutton:focus {
  background-image: url('images/button_pressed.png');
  cursor: pointer;
  color: black;
  text-decoration: none;
}

.navigationbar .navigationbutton .navigationbutton-text {
  margin-left: auto;
  margin-right: auto;
}

.navigationbar .navigationbutton + .navigationbutton {
  margin-left: 100px;
}

